get current game
